# 20th_intern_KimDohyun

./: README.md
C++&Qt/day2/hw2/: CMakeLists.txt
C++&Qt/day3/hw1/hw1/: CMakeLists.txt
C++&Qt/day3/hw1/hw1/src/: mainwindow.cpp
OpenCV/day1/hw1/hw1/: CMakeLists.txt
OpenCV/day1/hw1/hw1/include/hw1/: main.h
OpenCV/day1/hw1/hw1/src/: main.cpp
OpenCV/day1/hw2/hw2/: CMakeLists.txt
OpenCV/day1/hw2/hw2/include/hw2/: mainwindow.h
OpenCV/day1/hw2/hw2/src/: mainwindow.cpp
OpenCV/day1/hw2/hw2/ui/: mainwindow.ui
OpenCV/day2/hw1/: CMakeLists.txt
OpenCV/day2/hw1/include/hw1/: mainwindow.h
OpenCV/day2/hw1/src/: mainwindow.cpp
OpenCV/day2/hw1/ui/: mainwindow.ui
ROS2/day1/hw1/: .~lock.hw1.odt#  hw1.odt
ROS2/day1/hw2/cpp_pkg/: CMakeLists.txt  package.xml
ROS2/day1/hw2/cpp_pkg/include/cpp_pkg/: publisher.hpp  subscriber.hpp
ROS2/day1/hw2/cpp_pkg/src/: publisher.cpp  subscriber.cpp
ROS2/day4/hw1/hw1/: CMakeLists.txt  package.xml
ROS2/day4/hw1/hw1/include/hw1/: publisher.h  subscriber.h
ROS2/day4/hw1/hw1/src/: publisher.cpp  subscriber.cpp
